--- a/CalendarioActividades.html
+++ b/CalendarioActividades.html
@@ -12,40 +12,49 @@
     /* Topbar con logos, navegación y selector centrado */
     .topbar {
       display: grid;
-      grid-template-columns: 1fr auto 1fr;
+      grid-template-columns: auto minmax(0, 1fr) auto;
       align-items: center;
       gap: 12px;
-      margin-bottom: 16px;
     }
     .left, .right { display:flex; align-items:center; }
     .left { justify-content:flex-start; }
     .right { justify-content:flex-end; }
 
+
+    header {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    h1 {
+      margin: 0.5rem 0;
+      color: #0077cc;
+    }
+	
 .center {
   display: grid;
-  /* 1ª fila: [Anterior] [Etiqueta] [Combo] [Siguiente]  */
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto; /* 2ª fila: “Volver a hoy” */
+  grid-template-columns: auto minmax(0, 1fr) auto; /* antes: auto auto auto */
+  grid-template-rows: auto auto; /* mantienes “Volver a hoy” en la 2ª fila */
   align-items: center;
   justify-content: center;
   gap: 8px;
   background: #fff;
   border: 1px solid #e5e7eb;
   border-radius: 15px;
-  padding: 8px 12px;
+  padding: 5px 5px;
+  width: 100%;
 }
 
-#prevWeek { grid-column: 1; grid-row: 1; }
+/* Mantén las posiciones */
+#prevWeek   { grid-column: 1; grid-row: 1; }
 #weekSelect { grid-column: 2; grid-row: 1; }
-#nextWeek { grid-column: 3; grid-row: 1; }
+#nextWeek   { grid-column: 3; grid-row: 1; }
+#todayBtn   { grid-column: 1 / -1; grid-row: 2; justify-self: center; margin-top: 6px; }
 
-/* Botón “Volver a hoy” en la 2ª fila, centrado y a lo ancho */
-#todayBtn {
-  grid-column: 1 / -1;
-  grid-row: 2;
-  justify-self: center;
-  margin-top: 6px;
-}
+/* Clave para que el select no desborde en Grid/Safari iOS */
+#weekSelect { width: 100%; min-width: 0; max-width: 100%; }
+.center > * { min-width: 0; }
+
 
 
     .nav-btn, .today-btn {
@@ -56,9 +65,25 @@
     select { padding: 6px 10px; font-size:14px; border:1px solid #d1d5db; border-radius:8px; background:#fff; }
 
     /* Logos solo en web (ocultos en impresión y en pantallas muy pequeñas) */
-    .logo { height:150px; width:auto; object-fit:contain; pointer-events:none; user-select:none; }
-    @media (max-width: 520px) { .left, .right { display:none; } }
+    .logo { height:150px; width:auto; object-fit:contain; pointer-events:none; user-select:none; } 
+	
+    @media (max-width: 360px) { body { margin: 12px; } }
+	/* @media (max-width: 520px) { .left, .right { display:none; } } */ 
+
+@media (max-width: 520px) {
+  .topbar {
+    grid-template-columns: 1fr;  /* colapsa a una sola columna */
+    gap: 0;                      /* sin espacios laterales del grid */
+  }
+  .center {
+    justify-self: stretch;       /* asegura que el ítem se estire */
+    width: 100%;
+  }
+}
+	
+	@media (max-width: 768px) { .logo { height: 56px; } }	
     @media print { .left, .right { display:none !important; } }
+	
 
     .days { margin-top: 8px; display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 10px; }
     .day { padding: 12px 14px; border: 1px solid #e5e7eb; border-radius: 12px; cursor: pointer; transition: transform .05s ease, box-shadow .1s ease; background:#fff; }
@@ -93,6 +118,11 @@
   </style>
 </head>
 <body>
+	<header>
+	  <h1>Calendario de Actividades</h1>
+	  <h1>Club Baruch</h1>
+	</header>
+
   <div class="topbar">
     <div class="left">
       <img class="logo" src="Imagenes/LogoConquisAventureros.jpg" alt="Conquistadores y Aventureros" />
