Actualización de actividades

--- a/CalendarioActividades.html
+++ b/CalendarioActividades.html
@@ -162,13 +162,177 @@
 
   <script>
     // ======= Datos de ejemplo (con campos extra) =======
-    const activitiesData = [
-		{ date:'2025-08-03', time:'10:00', title:'Clases Normales', description:'', encargado:'Cada Club', oficial:'OD: Directora', lugar:'', direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', otro:'', type:'', img: 'Imagenes/LogoConquisAventureros.jpg'},
-		{ date:'2025-08-10', time:'10:00', title:'Clases Normales', description:'', encargado:'Cada Club', oficial:'OD: Conquis', lugar:'Salón', direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', otro:'', type:'', img:'Imagenes/LogoConquisAventureros.jpg'},
-		{ date:'2025-08-17', time:'', title:'LIBRE', description:'Día Libre', encargado:'', oficial:'', lugar:'', direccion:'', otro:'', type:'', img:'Imagenes/LogoConquisAventureros.jpg'},
-		{ date:'2025-08-23', time:'10:00', title:'Basta de Silencio', description:'', encargado:'Departamento de la Mujer', oficial:'', lugar:'Iglesia', direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', otro:'', type:'', img:'Imagenes/LogoIglesia.png'},
-		{ date:'2025-08-24', time:'10:00', title:'Clases Normales', description:'- Especialidad CICLISMO I<br>- Instrucción de NUDOS Y AMARRAS', encargado:'Cada Club', oficial:'', lugar:'Salón', direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', otro:'', type:'', img:'Imagenes/LogoConquisAventureros.jpg'},
-		{ date:'2025-08-31', time:'10:00', title:'Salida MIRADOR DE VOLCANES', description:'Salida Mirador Los Volcanes', encargado:'Cada Club', oficial:'', lugar:'Salón', direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a><br><a href="https://maps.app.goo.gl/NnbfMTTMPyNLXBgk8" target="_blank">Mirador Volcanes</a>', otro:'', type:'', img:'Imagenes/LogoConquisAventureros.jpg'}
+const activitiesData = [	
+{ date:'2025-08-03', time:'10:00', 
+					 title:'Clases Normales', 
+					 description:'', 
+					 encargado:'Cada Club', 
+					 oficial:'OD: Directora', 
+					 lugar:'', 
+					 direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', 
+					 otro:'', 
+					 type:'', 
+					 img: 'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-08-10', time:'10:00', 
+					 title:'Clases Normales', 
+					 description:'', 
+					 encargado:'Cada Club', 
+					 oficial:'OD: Conquis', 
+					 lugar:'Salón', 
+					 direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-08-17', time:'', 
+					 title:'LIBRE', 
+					 description:'Día Libre', 
+					 encargado:'', 
+					 oficial:'', 
+					 lugar:'', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-08-23', time:'10:00', 
+					 title:'Basta de Silencio', 
+					 description:'', 
+					 encargado:'Departamento de la Mujer', 
+					 oficial:'', 
+					 lugar:'Iglesia', 
+					 direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoIglesia.png'},
+{ date:'2025-08-24', time:'10:00', 
+					 title:'Clases Normales', 
+					 description:'- Especialidad CICLISMO I<br>- Instrucción de NUDOS Y AMARRAS', 
+					 encargado:'Cada Club', 
+					 oficial:'', 
+					 lugar:'Salón', 
+					 direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-08-31', time:'10:00', 
+					 title:'Salida MIRADOR DE VOLCANES', 
+					 description:'Salida Mirador Los Volcanes', 
+					 encargado:'Cada Club', 
+					 oficial:'', 
+					 lugar:'Salón', 
+					 direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a><br><a href="https://maps.app.goo.gl/NnbfMTTMPyNLXBgk8" target="_blank">Mirador Volcanes</a>', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},	
+{ date:'2025-09-10', time:'', 
+					 title:'Semana del Pañolín de Conquistadores', 
+					 description:'', 
+					 encargado:'Director', 
+					 oficial:'', 
+					 lugar:'', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-09-11', time:'', 
+					 title:'Semana del Pañolín de Conquistadores', 
+					 description:'', 
+					 encargado:'Director', 
+					 oficial:'', 
+					 lugar:'', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-09-12', time:'', 
+					 title:'Semana del Pañolín de Conquistadores', 
+					 description:'', 
+					 encargado:'Director', 
+					 oficial:'', 
+					 lugar:'', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-09-13', time:'', 
+					 title:'Semana del Pañolín de Conquistadores', 
+					 description:'', 
+					 encargado:'Director', 
+					 oficial:'', 
+					 lugar:'', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-09-07', time:'10:00', 
+					 title:'Especialidades', 
+					 description:'- Especialidad CICLISMO I<br>- Instrucción de NUDOS Y AMARRAS', 
+					 encargado:'Cada Club', 
+					 oficial:'', 
+					 lugar:'Salón', 
+					 direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-09-13', time:'09:30', 
+					 title:'Día del conquistador', 
+					 description:'Día del conquistador', 
+					 encargado:'Director', 
+					 oficial:'', 
+					 lugar:'', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:''},
+{ date:'2025-09-13', time:'??:??', 
+					 title:'Ceremonia de investidura', 
+					 description:'Día del conquistador', 
+					 encargado:'Director', 
+					 oficial:'', 
+					 lugar:'Salón', 
+					 direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>',  
+					 otro:'', 
+					 type:'', 
+					 img:''},			 
+{ date:'2025-09-14', time:'10:00', 
+					 title:'Fiestas Patrias', 
+					 description:'', 
+					 encargado:'Directores', 
+					 oficial:'OD: Conquis', 
+					 lugar:'Patio Iglesia', 
+					 direccion:'<a href="https://maps.app.goo.gl/E63LZB4MPMJLij8f6" target="_blank">Teodoro Schmidt 35</a>',  
+					 otro:'', 
+					 type:'', 
+					 img:''},
+{ date:'2025-09-21', time:'', 
+					 title:'LIBRE', 
+					 description:'', 
+					 encargado:'', 
+					 oficial:'', 
+					 lugar:'', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-09-27', time:'??:??', 
+					 title:'Comparte tu pan', 
+					 description:'', 
+					 encargado:'', 
+					 oficial:'', 
+					 lugar:'Por definir', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
+{ date:'2025-09-28', time:'10:00', 
+					 title:'Especialidad', 
+					 description:'Especialidad CICLISMO I: Cicletada a Malalche', 
+					 encargado:'', 
+					 oficial:'', 
+					 lugar:'Malalche', 
+					 direccion:'', 
+					 otro:'', 
+					 type:'', 
+					 img:'Imagenes/LogoConquisAventureros.jpg'},
     ];
 
     // ======= Utilidades de fecha (parser LOCAL) =======
